force-app/main/default/objects/Reference_Termination_for_Performance__c/Reference_Termination_for_Performance__c.object-meta.xml
<CustomObject>
    <label>Reference Termination for Performance</label>
    <nameField>
        <displayFormat>RTP-{0000}</displayFormat>
        <label>Reference Termination for Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Termination for Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>