force-app/main/default/objects/Reference_Termination_for_Performance__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>Case_Number__r.Subject</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>