force-app/main/default/objects/Reference_Termination_for_Performance__c/fields/Term_for_Performance_Q_26__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Performance_Q_26__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Include each of the employees’ demographics, including the employee at issue here.</inlineHelpText>
    <label>Term for Performance - Q 26</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>