force-app/main/default/objects/Reference_Termination_for_Performance__c/fields/Term_for_Performance_Q_2__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Performance_Q_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How did the employee know the performance expectations of their position?</inlineHelpText>
    <label>Term for Performance - Q 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>