force-app/main/default/objects/Reference_Termination_for_Performance__c/fields/Term_for_Performance_Q_7__c.field-meta.xml
<CustomField>
    <fullName>Term_for_Performance_Q_7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In date order, describe the employee’s performance history, including written documentation (e.g., performance evaluations, emails, written warnings, etc.), discussions with the employee (e.g., summaries and dates of verbal discussions), and any other information that the employer might use to explain or show the performance issue(s).  Have met performance requirements in the past.</inlineHelpText>
    <label>Term for Performance - Q 7</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>